# My-AI-Journey

./: README.md
vitruvius/: .env.example  .gitignore  CHANGELOG.md  LITERATURE.md  Makefile  README.md  pyproject.toml  requirements.txt
vitruvius/analysis/: failure_examples.md  failure_taxonomy.md
vitruvius/experiments/phase2/: README.md  env_snapshot.txt  phase2_smoke.json  pod_commits.bundle
vitruvius/experiments/phase3/: README.md  SUMMARY.md  bert-base__fiqa.json  (+8 more)
vitruvius/figures/: cumulative_pruning_curves_caption.md  failure_by_architecture_caption.md  head_importance_by_layer_caption.md  head_importance_heatmap_bert-base_caption.md  head_importance_heatmap_gte-small_caption.md  head_importance_heatmap_minilm-l6-v2_caption.md  pareto_v2_caption.md  position_sensitivity_caption.md  query_length_vs_ndcg_caption.md  sensitivity_by_family_caption.md
vitruvius/notebooks/: 02_phase6_failure_analysis.ipynb  02_phase6_failure_analysis.py
vitruvius/notes/: mamba_install_attempt_01.md  mamba_install_attempt_02.md  transformers_head_mask_bug.md
vitruvius/scripts/: cumulative_pruning_sweep.py  download_beir.py  download_msmarco.py  generate_pareto_v2.py  head_importance_sweep.py  phase5_summary_gen.py  phase6_analysis.py  phase6_failure_examples.py  phase6_label_taxonomy.py  phase6_promote_figures.py  phase7_analysis.py  phase7_writeup_gen.py  phase8_analysis.py  phase8_writeup_gen.py  setup_pod.sh  shuffle_sweep.py
vitruvius/tests/: conftest.py  test_encoder_interface.py  test_metrics.py  test_pruned_transformer.py  test_shuffle.py  test_smoke.py
(+226 files in other folders)
