[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vitruvius"
version = "0.7.0"
description = "Dense retrieval encoder architecture study — transformer vs SSM vs recurrent vs convolutional"
authors = [{name = "Aryan D Haritsa", email = "aryanharitsa@gmail.com"}]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "torch>=2.2",
    "transformers>=4.40,<5.0",
    "sentence-transformers>=3.0",
    "beir>=2.0",
    "faiss-cpu>=1.8",
    "numpy>=1.26",
    "pandas>=2.2",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "tqdm>=4.66",
    "rich>=13.7",
    "wandb>=0.16",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = ["pytest>=8.1", "ruff>=0.4", "black>=24.3", "mypy>=1.9", "jupyter>=1.0"]
mamba = ["mamba-ssm>=1.2", "causal-conv1d>=1.2"]
pod = ["faiss-gpu>=1.8"]

[project.urls]
Repository = "https://github.com/Aryanharitsa/My-AI-Journey"

[project.scripts]
vitruvius = "vitruvius.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
